--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: denoland/setup-deno@v2
         with:
+          cache: true
           deno-version: v2.x
       - name: Run lint
         run: ./lint.ts
@@ -23,6 +24,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: denoland/setup-deno@v2
         with:
+          cache: true
           deno-version: v2.x
       - name: Run generate
         run: ./generate.ts
