--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,11 +32,10 @@ jobs:
           rm -rf dist
           cp -r static dist
           ./generate.ts
-          cp --recursive --dereference --no-preserve=mode,ownership dist artifact
       - uses: actions/upload-artifact@v4
         with:
           name: github-pages
-          path: artifact/
+          path: dist/
   deploy:
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     runs-on: ubuntu-latest
@@ -50,4 +49,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v3
+        uses: actions/deploy-pages@v4
