--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,9 +32,8 @@ jobs:
           rm -rf dist
           cp -r static dist
           ./generate.ts
-      - uses: actions/upload-artifact@v4
+      - uses: actions/upload-pages-artifact@v3
         with:
-          name: github-pages
           path: dist/
   deploy:
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
