Fix mistakes in GIR and Loop Critter data

--- a/shimeji/GIR.yaml
+++ b/shimeji/GIR.yaml
@@ -1,6 +1,6 @@
 shimeji:
   name: GIR
-  url: "https://canarypop.ciao.jp/shimehatsune.htm"
+  url: "https://www.deviantart.com/billsquid/art/Gir-Shimeji-259605633"
   creator: "BillSquid"
   description:
     - >-
