--- a/shimeji/LoopCritter.yaml
+++ b/shimeji/LoopCritter.yaml
@@ -1,5 +1,5 @@
 shimeji:
-  name: OMORI characters
+  name: Loop Critter
   url: "https://www.tumblr.com/tawnysoup/764516652728696832/loop-critter-shimeji"
   creator: "tawnysoup on Tumblr"
   description:
