--- a/shimeji/Ena.yaml
+++ b/shimeji/Ena.yaml
@@ -1,5 +1,5 @@
 shimeji:
-  name: GIR
+  name: Ena
   url: "https://www.deviantart.com/a-thingy/art/ENA-Shimeji-872620934"
   creator: "A-Thingy"
   description:
