--- a/shimeji/Vaggie.yaml
+++ b/shimeji/Vaggie.yaml
@@ -4,4 +4,4 @@ shimeji:
   creator: "bambitek on Tumblr"
   description:
     - >-
-      Vaggie from the show Hazbin Hotel.
+      Vaggie from the TV show Hazbin Hotel.
