--- a/shimeji/Tenna.yaml
+++ b/shimeji/Tenna.yaml
@@ -4,9 +4,4 @@ shimeji:
   creator: "erotophh"
   description:
     - >-
-      It's now time for our feacher presentation. (FEACHER)
-    - >-
-      Coming straight from your house! (Coming straight from YOUR house.) He's
-      the one, the KING OF only... He's GROOVY and NEVER glooby! ...You can't
-      get this from an EGG! The sensation of your screen, the show that makes
-      you scream (Say it with him, folks!): Mr. (Ant) Tenna's TV Time ~!
+      Mr. (Ant) Tenna from Deltarune chapter 3.
