--- a/shimeji/Sonic.yaml
+++ b/shimeji/Sonic.yaml
@@ -4,5 +4,5 @@ shimeji:
   creator: "Myly14"
   description:
     - >-
-      Sonic the Hedgehog. A mirrored download link is available in the comments
-      section of the linked page.
+      Sonic the Hedgehog. (The main download link is broken, but an alternative
+      link is available in the comments.)
