New shimeji issue template

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 *
 !.github/
+!.github/ISSUE_TEMPLATE/
+!.github/ISSUE_TEMPLATE/new_shimeji.yaml
 !.github/workflows
 !.github/workflows/build.yaml
 !shimeji/
@@ -12,3 +14,4 @@
 !generate.ts
 !lint.ts
 !README.md
+!submission_guidelines.md
