--- a/.github/ISSUE_TEMPLATE/new_shimeji.yaml
+++ b/.github/ISSUE_TEMPLATE/new_shimeji.yaml
@@ -1,4 +1,4 @@
-name: "✨ New Shimeji Request"
+name: "✨ New Shimeji Submission"
 description: Submit your own shimeji to the featured tab
 title: "[New Shimeji]: (Write your shimeji's name here...)"
 labels: ["New Shimeji"]
