Add preview-filename field

--- a/.github/ISSUE_TEMPLATE/new_shimeji.yaml
+++ b/.github/ISSUE_TEMPLATE/new_shimeji.yaml
@@ -79,6 +79,15 @@ body:
         your website or something else.
     validations:
       required: true
+
+  - type: input
+    id: preview-filename
+    attributes:
+      label: >-
+        Which image within the shimeji should be used as the preview image in Shijima?
+        (e.g. shime1.png)
+    validations:
+      required: true
   
   - type: checkboxes
     id: test-confirmation
