--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,16 @@
 *
-!.github/
-!.github/ISSUE_TEMPLATE/
-!.github/ISSUE_TEMPLATE/*.yaml
-!.github/workflows
-!.github/workflows/*.yaml
-!shimeji/
-!shimeji/*.yaml
-!shimeji/*.png
-!static/
-!static/*.html
-!.gitattributes
-!.gitignore
-!generate.ts
-!lint.ts
-!README.md
-!submission_guidelines.md
+!/.github/
+!/.github/ISSUE_TEMPLATE/
+!/.github/ISSUE_TEMPLATE/*.yaml
+!/.github/workflows
+!/.github/workflows/*.yaml
+!/shimeji/
+!/shimeji/*.yaml
+!/shimeji/*.png
+!/static/
+!/static/*.html
+!/.gitattributes
+!/.gitignore
+!/generate.ts
+!/lint.ts
+!/*.md
