Update issue template descriptions

--- a/.github/ISSUE_TEMPLATE/new_shimeji.yaml
+++ b/.github/ISSUE_TEMPLATE/new_shimeji.yaml
@@ -1,5 +1,5 @@
 name: "✨ New Shimeji Submission"
-description: Submit your own shimeji to the featured tab
+description: Submit your own shimeji to Shijima's Featured tab
 title: "[New Shimeji]: (Write your shimeji's name here...)"
 labels: ["New Shimeji"]
 body:
