--- a/.github/ISSUE_TEMPLATE/remove_shimeji.yaml
+++ b/.github/ISSUE_TEMPLATE/remove_shimeji.yaml
@@ -1,5 +1,5 @@
 name: "❌ Removal Request"
-description: Get your shimeji removed from Shijima's featured tab
+description: Get your shimeji removed from Shijima's Featured tab
 title: "[Removal Request]: (Write your shimeji's name here...)"
 labels: ["Removal Request"]
 body:
