Add Shijima-Android mention

--- a/.github/ISSUE_TEMPLATE/new_shimeji.yaml
+++ b/.github/ISSUE_TEMPLATE/new_shimeji.yaml
@@ -123,7 +123,8 @@ body:
           In this text,
 
           - Shijima refers to any past, current and future versions of Shijima developed
-          by pixelomer including Shijima-Qt, Shijima-iOS, Shijima-Wii, Shijima-NX.
+          by pixelomer including Shijima-Qt, Shijima-iOS, Shijima-Wii, Shijima-NX
+          and Shijima-Android.
           - Content refers to the shimeji identified by your submission, and the
           other information your provided as a part of your submission.
 
